--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -13,6 +13,7 @@ header {
   cursor: pointer;
   transform: scale(1.2, 1.2);
 }
+
 /**$*$*****************************************************************
 *$*$                         LOGO                                     *
 *$*$*******************************************************************/
@@ -39,6 +40,10 @@ header {
 .menuSecciones:hover {
   color: #70f7e0 !important;
   transform: scale(1.1, 1.1);
+}
+
+.hoverOpciones:hover {
+  background-color: #70f7e0 !important;
 }
 
 /**$*$********************************************************************
