--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -75,3 +75,22 @@ header {
   overflow: hidden;
   z-index: 100;
 }
+
+/*TABLET LANDSCAPE UP DISPOSITIVOS MEDIOS*/
+@media screen and (max-width: 768px) {
+  .contador {
+    top: 5px;
+    right: 15px;
+    font-size: 15px;
+    width: 20px;
+    height: 20px;
+  }
+}
+
+/*TELEFONOS LANDSCAPE + TABLET VERTICAL DISPOSITIVOS SMALLS*/
+@media screen and (max-width: 599px) {
+  .contador {
+    top: 50px;
+    right: 140px;
+  }
+}
